--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,7 @@
   grid-template-columns: repeat(auto-fill, minmax(150px, 1fr));
   grid-auto-rows: 60px;
   grid-gap: 16px;
+  cursor: pointer;
 }
 
 .List__item {
